# UCP

./: CMakeLists.txt  eu-2015.indegree.degdist  fb-current.degdist
src/: NaiveLoads.cpp  UCP_cuda.cu  UCP_hip.cpp  UCP_mpi.cpp  colocation_new.cpp
